--- a/src/client/CustomerClient/Views/CustomerBrowser/customerBrowse.fxml
+++ b/src/client/CustomerClient/Views/CustomerBrowser/customerBrowse.fxml
@@ -150,7 +150,7 @@
                                  <children>
                                     <ImageView fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@../images/150placeholder.png" />
+                                          <Image url="@../../../../images/150placeholder.png" />
                                        </image>
                                     </ImageView>
                                     <VBox prefHeight="150.0" prefWidth="465.0">
@@ -179,7 +179,7 @@
                                  <children>
                                     <ImageView fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@../images/150placeholder.png" />
+                                          <Image url="@../../../../images/150placeholder.png" />
                                        </image>
                                     </ImageView>
                                     <VBox prefHeight="150.0" prefWidth="465.0">
@@ -208,7 +208,7 @@
                                  <children>
                                     <ImageView fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@../images/150placeholder.png" />
+                                          <Image url="@../../../../images/150placeholder.png" />
                                        </image>
                                     </ImageView>
                                     <VBox prefHeight="150.0" prefWidth="465.0">
@@ -237,7 +237,7 @@
                                  <children>
                                     <ImageView fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@../images/150placeholder.png" />
+                                          <Image url="@../../../../images/150placeholder.png" />
                                        </image>
                                     </ImageView>
                                     <VBox prefHeight="150.0" prefWidth="465.0">
@@ -266,7 +266,7 @@
                                  <children>
                                     <ImageView fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@../images/150placeholder.png" />
+                                          <Image url="@../../../../images/150placeholder.png" />
                                        </image>
                                     </ImageView>
                                     <VBox prefHeight="150.0" prefWidth="465.0">
@@ -295,7 +295,7 @@
                                  <children>
                                     <ImageView fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@../images/150placeholder.png" />
+                                          <Image url="@../../../../images/150placeholder.png" />
                                        </image>
                                     </ImageView>
                                     <VBox prefHeight="150.0" prefWidth="465.0">
@@ -324,7 +324,7 @@
                                  <children>
                                     <ImageView fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@../images/150placeholder.png" />
+                                          <Image url="@../../../../images/150placeholder.png" />
                                        </image>
                                     </ImageView>
                                     <VBox prefHeight="150.0" prefWidth="465.0">
@@ -353,7 +353,7 @@
                                  <children>
                                     <ImageView fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@../images/150placeholder.png" />
+                                          <Image url="@../../../../images/150placeholder.png" />
                                        </image>
                                     </ImageView>
                                     <VBox prefHeight="150.0" prefWidth="465.0">
@@ -382,7 +382,7 @@
                                  <children>
                                     <ImageView fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@../images/150placeholder.png" />
+                                          <Image url="@../../../../images/150placeholder.png" />
                                        </image>
                                     </ImageView>
                                     <VBox prefHeight="150.0" prefWidth="465.0">
@@ -411,7 +411,7 @@
                                  <children>
                                     <ImageView fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@../images/150placeholder.png" />
+                                          <Image url="@../../../../images/150placeholder.png" />
                                        </image>
                                     </ImageView>
                                     <VBox prefHeight="150.0" prefWidth="465.0">
@@ -440,7 +440,7 @@
                                  <children>
                                     <ImageView fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@../images/150placeholder.png" />
+                                          <Image url="@../../../../images/150placeholder.png" />
                                        </image>
                                     </ImageView>
                                     <VBox prefHeight="150.0" prefWidth="465.0">
@@ -469,7 +469,7 @@
                                  <children>
                                     <ImageView fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@../images/150placeholder.png" />
+                                          <Image url="@../../../../images/150placeholder.png" />
                                        </image>
                                     </ImageView>
                                     <VBox prefHeight="150.0" prefWidth="465.0">
