--- a/src/client/customerclient/views/customersubscriptions/customerSubscriptions.fxml
+++ b/src/client/customerclient/views/customersubscriptions/customerSubscriptions.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.CustomerClient.Views.CustomerBrowser.CustomerBrowserViewController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.customerclient.views.customerbrowse.CustomerBrowserViewController">
     <children>
         <VBox prefHeight="120.0" prefWidth="900.0" style="-fx-background-color: lightblue;">
             <children>
