--- a/src/client/customerclient/views/customersubscriptions/CustomerSubscriptions.fxml
+++ b/src/client/customerclient/views/customersubscriptions/CustomerSubscriptions.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.customerclient.views.customerbrowse.CustomerBrowserViewController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.customerclient.views.customerbrowser.CustomerBrowserViewController">
     <children>
         <VBox prefHeight="120.0" prefWidth="900.0" style="-fx-background-color: lightblue;">
             <children>
@@ -28,9 +28,9 @@
                         </Text>
                   <HBox alignment="CENTER_RIGHT" prefHeight="46.0" prefWidth="500.0" spacing="10.0" HBox.hgrow="ALWAYS">
                      <children>
-                              <Button mnemonicParsing="false" onAction="#openSubscriptions" prefHeight="30.0" prefWidth="120.0" text="My Subscriptions" />
-                              <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="120.0" text="Nothing" />
-                              <Button mnemonicParsing="false" onAction="#openBasket" prefHeight="30.0" prefWidth="120.0" text="Basket" />
+                         <Button mnemonicParsing="false" onAction="#openProductBrowser" prefHeight="30.0" prefWidth="120.0" text="Browser" />
+                         <Button mnemonicParsing="false" onAction="#openSubscriptions" prefHeight="30.0" prefWidth="120.0" text="My Subscriptions" />
+                         <Button mnemonicParsing="false" onAction="#openBasket" prefHeight="30.0" prefWidth="120.0" text="Basket" />
                      </children>
                      <HBox.margin>
                         <Insets right="5.0" />
