--- a/src/client/customerclient/views/customerbrowser/CustomerBrowser.fxml
+++ b/src/client/customerclient/views/customerbrowser/CustomerBrowser.fxml
@@ -1,18 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.customerclient.views.customerbrowser.CustomerBrowserViewController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.customerclient.views.customerbrowser.CustomerBrowserViewController">
     <children>
         <VBox prefHeight="120.0" prefWidth="900.0" style="-fx-background-color: lightblue;">
             <children>
@@ -177,7 +171,7 @@
                                           <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0">
                                              <children>
                                                 <TextField prefHeight="30.0" prefWidth="130.0" promptText="Amount" />
-                                                <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" text="Add to basket">
+                                                <Button mnemonicParsing="false" onMouseClicked="#addToBasket" prefHeight="30.0" prefWidth="100.0" text="Add to basket">
                                                    <HBox.margin>
                                                       <Insets right="8.0" />
                                                    </HBox.margin>
