--- a/src/client/customerclient/views/customerbrowser/CustomerBrowser.fxml
+++ b/src/client/customerclient/views/customerbrowser/CustomerBrowser.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
@@ -12,7 +13,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.customerclient.views.customerbrowser.CustomerBrowserViewController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.customerclient.views.customerbrowser.CustomerBrowserViewController">
     <children>
         <VBox prefHeight="120.0" prefWidth="900.0" style="-fx-background-color: lightblue;">
             <children>
@@ -61,13 +62,16 @@
                                 <Font name="System Bold" size="22.0" />
                             </font>
                         </Text>
-                        <Text fx:id="categoryColonial" onMouseClicked="#loadSpecificCategory" strokeType="OUTSIDE" strokeWidth="0.0" text="● Kolonial" wrappingWidth="195.9830722808838">
+                        <Text fx:id="categoryColonial" onMouseClicked="#loadSpecificCategory" strokeType="OUTSIDE" strokeWidth="0.0" text="● Kolonial" wrappingWidth="75.54669380187988">
                             <font>
                                 <Font size="16.0" />
                             </font>
                             <VBox.margin>
                                 <Insets left="8.0" />
                             </VBox.margin>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                         </Text>
                         <!--<Text fill="#4d4d4d" strokeType="OUTSIDE" strokeWidth="0.0" text="● Bread" wrappingWidth="195.9830722808838">
                            <font>
@@ -93,13 +97,16 @@
                               <Insets left="25.0" />
                            </VBox.margin>
                         </Text>-->
-                        <Text fx:id="categoryDiaryAndEggs" onMouseClicked="#loadSpecificCategory" strokeType="OUTSIDE" strokeWidth="0.0" text="● Mejeri og Æg" wrappingWidth="195.9830722808838">
+                        <Text fx:id="categoryDiaryAndEggs" onMouseClicked="#loadSpecificCategory" strokeType="OUTSIDE" strokeWidth="0.0" text="● Mejeri og Æg" wrappingWidth="114.81942939758301">
                             <font>
                                 <Font size="16.0" />
                             </font>
                             <VBox.margin>
                                 <Insets left="8.0" />
                             </VBox.margin>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                         </Text>
                         <Text fx:id="categoryFrozenFoods" onMouseClicked="#loadSpecificCategory" strokeType="OUTSIDE" strokeWidth="0.0" text="● Frostvarer" wrappingWidth="195.9830722808838">
                             <font>
@@ -108,6 +115,9 @@
                             <VBox.margin>
                                 <Insets left="8.0" />
                             </VBox.margin>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                         </Text>
                         <Text fx:id="categoryFruitAndVegetables" onMouseClicked="#loadSpecificCategory" strokeType="OUTSIDE" strokeWidth="0.0" text="● Frugt og grønt" wrappingWidth="195.9830722808838">
                             <font>
@@ -116,6 +126,9 @@
                             <VBox.margin>
                                 <Insets left="8.0" />
                             </VBox.margin>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                         </Text>
                         <Text fx:id="categoryMeatAndSeafoods" onMouseClicked="#loadSpecificCategory" strokeType="OUTSIDE" strokeWidth="0.0" text="● Kød og fisk" wrappingWidth="195.9830722808838">
                             <font>
@@ -124,6 +137,9 @@
                             <VBox.margin>
                                 <Insets left="8.0" />
                             </VBox.margin>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                         </Text>
                         <Text fx:id="categoryDrinks" onMouseClicked="#loadSpecificCategory" strokeType="OUTSIDE" strokeWidth="0.0" text="● Drikkevarer (Uden alkohol)" wrappingWidth="195.9830722808838">
                             <font>
@@ -132,6 +148,9 @@
                             <VBox.margin>
                                 <Insets left="8.0" />
                             </VBox.margin>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                         </Text>
                         <Text fx:id="categoryAlcohol" onMouseClicked="#loadSpecificCategory" strokeType="OUTSIDE" strokeWidth="0.0" text="● Drikkevarer (Med alkohol)" wrappingWidth="195.9830722808838">
                             <font>
@@ -140,6 +159,9 @@
                             <VBox.margin>
                                 <Insets left="8.0" />
                             </VBox.margin>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                         </Text>
                     </children>
                     <HBox.margin>
