--- a/src/client/customerclient/views/customerbasket/CustomerBasket.fxml
+++ b/src/client/customerclient/views/customerbasket/CustomerBasket.fxml
@@ -11,6 +11,8 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
+<!-- Kasper Falk -->
+
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.customerclient.views.customerbasket.BasketViewController">
    <children>
       <VBox prefHeight="120.0" prefWidth="900.0" style="-fx-background-color: lightblue;">
