--- a/src/client/customerclient/views/customerbasket/CustomerBasket.fxml
+++ b/src/client/customerclient/views/customerbasket/CustomerBasket.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.customerclient.views.customerbasket.BasketViewController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.customerclient.views.customerbasket.BasketViewController">
    <children>
       <VBox prefHeight="120.0" prefWidth="900.0" style="-fx-background-color: lightblue;">
          <children>
@@ -69,6 +69,11 @@
                                                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                              </padding>
                                           </HBox>
+                                          <Text fx:id="basketSum" strokeType="OUTSIDE" strokeWidth="0.0" text="SUM" textAlignment="RIGHT" wrappingWidth="846.13671875">
+                                             <font>
+                                                <Font size="22.0" />
+                                             </font>
+                                          </Text>
                                        </children>
                                     </VBox>
                                  </children>
